Fix T82384: Custom Properties for ShaderNodeTree do not save in blend files.

Not sure why those were excluded, there is no reason not to write ID
data itself for embedded IDs...